// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component renders properly 1`] = `
<div
  className="webex-spinner spinner"
/>
`;

exports[`Spinner component renders with the bright property 1`] = `
<div
  className="webex-spinner spinner bright"
/>
`;
